feat: move client and server to respective foldres

--- a/client/tsconfig.extend.json
+++ b/client/tsconfig.extend.json
@@ -7,7 +7,9 @@
           "common/*": ["src/common/*", "./src/common"],
           "components/*": ["src/components/*", "./src/components"],
           "hooks/*": ["src/hooks/*", "./src/hooks"],
+          "network/*": ["src/network/*", "./src/network"],
           "pages/*": ["src/pages/*", "./src/pages"],
+          "types/*": ["src/types/*", "./src/types"],
           "utils/*": ["src/utils/*", "./src/utils"]
         }
     }
