--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@heroicons/react": "^2.0.18",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@svgr/webpack": "^5.5.0",
+    "@tanstack/react-table": "^8.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -74,7 +75,7 @@
     "prepare": "husky install",
     "lint:prettier": "prettier --check .",
     "lint": "eslint_d -c .eslintrc --ext .js,.jsx,.ts,.tsx ./src",
-    "lint:fix": "npm run lint --fix"
+    "lint:fix": "npm run lint -- --fix"
   },
   "eslintConfig": {
     "extends": [
