--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -127,6 +127,8 @@
         "@typescript-eslint/no-unused-vars": "error",
         "@typescript-eslint/camelcase": "off",
         "@typescript-eslint/no-unsafe-assignment": "off",
+        "@typescript-eslint/no-unsafe-return": "off",
+        "@typescript-eslint/restrict-template-expressions": "off",
         "react-hooks/rules-of-hooks": "error", // Check rules of Hooks
         "react-hooks/exhaustive-deps": "warn", // Checks effect dependencies
         "import/order": [
