--- a/client/tsconfig.extend.json
+++ b/client/tsconfig.extend.json
@@ -8,9 +8,11 @@
           "components/*": ["src/components/*", "./src/components"],
           "hooks/*": ["src/hooks/*", "./src/hooks"],
           "layout/*": ["src/layout/*", "./src/layout"],
+          "mocks/*": ["src/mocks/*", "./src/mocks"],
           "network/*": ["src/network/*", "./src/network"],
           "pages/*": ["src/pages/*", "./src/pages"],
           "types/*": ["src/types/*", "./src/types"],
+          "testUtils/*": ["src/testUtils/*", "./src/testUtils"],
           "utils/*": ["src/utils/*", "./src/utils"]
         }
     }
