--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "client": "npm run start --prefix client",
     "server": "npm run start --prefix server",
     "dev": "concurrently \"npm run client\" \"npm run server\" ",
-    "test": "npm run test --prefix client",
-    "lint:staged": "npx lint-staged"
+    "test": "npm test --coverage --prefix client",
+    "lint:staged": "npx lint-staged",
+    "lint:fix": "npm run lint --prefix client"
   }
 }
