--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "server": "npm run start --prefix server",
     "dev": "concurrently \"npm run client\" \"npm run server\" ",
     "test": "npm test --coverage --prefix client",
-    "lint:staged": "npx lint-staged",
-    "lint:fix": "npm run lint --prefix client"
+    "lint:fix": "npm run lint:fix --prefix client"
   }
 }
