--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,10 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js a --coverage",
-    "lint:prettier": "prettier --check .",
     "lint": "eslint_d -c .eslintrc --ext .js,.jsx,.ts,.tsx ./src",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "npm run lint -- --fix",
+    "prettier:fix": "npx prettier --write .",
+    "format": "npm run prettier:fix && npm run lint:fix"
   },
   "dependencies": {
     "@babel/core": "^7.16.0",
@@ -112,6 +113,7 @@
     "eslint-plugin-css-import-order": "^1.1.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "husky": "^8.0.3",
@@ -122,7 +124,7 @@
     "typescript": "^5.0.4"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json,css,scss}": "prettier --write --print-width 120"
+    "**/*": "prettier --write --print-width 120"
   },
   "jest": {
     "roots": [
